admin swagger add
